Made share corner more prominent, fixed wrong z-index

--- a/app/stylus/init.styl
+++ b/app/stylus/init.styl
@@ -285,7 +285,7 @@ div.modal
     bottom -60px
     font-size 14px
     right -110px
-    z-index 10
+    z-index 30
     padding-top 15px
     height 120px
     width 240px
@@ -296,9 +296,9 @@ div.modal
         font-size 12px
         font-family Helvetica, sans-serif
         font-weight bold
-        color rgba(0, 0, 0, 0.5)
+        // color rgba(0, 0, 0, 0.8)
     .links
-        opacity 0.5
+        // opacity 0.5
         margin 5px 0 0 0
         font-size 24px
         a
